; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/crypto/extr_aes-gcm.c_aes_gcm_ae.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/crypto/extr_aes-gcm.c_aes_gcm_ae.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AES_BLOCK_SIZE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @aes_gcm_ae(i32* %0, i64 %1, i32* %2, i64 %3, i32* %4, i64 %5, i32* %6, i64 %7, i32* %8, i32* %9) #0 {
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  %13 = alloca i64, align 8
  %14 = alloca i32*, align 8
  %15 = alloca i64, align 8
  %16 = alloca i32*, align 8
  %17 = alloca i64, align 8
  %18 = alloca i32*, align 8
  %19 = alloca i64, align 8
  %20 = alloca i32*, align 8
  %21 = alloca i32*, align 8
  %22 = alloca i8*, align 8
  %23 = alloca i64, align 8
  %24 = alloca i64, align 8
  %25 = alloca [16 x i32], align 16
  %26 = alloca i8*, align 8
  %27 = alloca i32, align 4
  store i32* %0, i32** %12, align 8
  store i64 %1, i64* %13, align 8
  store i32* %2, i32** %14, align 8
  store i64 %3, i64* %15, align 8
  store i32* %4, i32** %16, align 8
  store i64 %5, i64* %17, align 8
  store i32* %6, i32** %18, align 8
  store i64 %7, i64* %19, align 8
  store i32* %8, i32** %20, align 8
  store i32* %9, i32** %21, align 8
  %28 = load i32, i32* @AES_BLOCK_SIZE, align 4
  %29 = zext i32 %28 to i64
  %30 = call i8* @llvm.stacksave()
  store i8* %30, i8** %22, align 8
  %31 = alloca i32, i64 %29, align 16
  store i64 %29, i64* %23, align 8
  %32 = load i32, i32* @AES_BLOCK_SIZE, align 4
  %33 = zext i32 %32 to i64
  %34 = alloca i32, i64 %33, align 16
  store i64 %33, i64* %24, align 8
  %35 = load i32*, i32** %12, align 8
  %36 = load i64, i64* %13, align 8
  %37 = call i8* @aes_gcm_init_hash_subkey(i32* %35, i64 %36, i32* %31)
  store i8* %37, i8** %26, align 8
  %38 = load i8*, i8** %26, align 8
  %39 = icmp eq i8* %38, null
  br i1 %39, label %40, label %41

40:                                               ; preds = %10
  store i32 -1, i32* %11, align 4
  store i32 1, i32* %27, align 4
  br label %62

41:                                               ; preds = %10
  %42 = load i32*, i32** %14, align 8
  %43 = load i64, i64* %15, align 8
  %44 = call i32 @aes_gcm_prepare_j0(i32* %42, i64 %43, i32* %31, i32* %34)
  %45 = load i8*, i8** %26, align 8
  %46 = load i32*, i32** %16, align 8
  %47 = load i64, i64* %17, align 8
  %48 = load i32*, i32** %20, align 8
  %49 = call i32 @aes_gcm_gctr(i8* %45, i32* %34, i32* %46, i64 %47, i32* %48)
  %50 = load i32*, i32** %18, align 8
  %51 = load i64, i64* %19, align 8
  %52 = load i32*, i32** %20, align 8
  %53 = load i64, i64* %17, align 8
  %54 = getelementptr inbounds [16 x i32], [16 x i32]* %25, i64 0, i64 0
  %55 = call i32 @aes_gcm_ghash(i32* %31, i32* %50, i64 %51, i32* %52, i64 %53, i32* %54)
  %56 = load i8*, i8** %26, align 8
  %57 = getelementptr inbounds [16 x i32], [16 x i32]* %25, i64 0, i64 0
  %58 = load i32*, i32** %21, align 8
  %59 = call i32 @aes_gctr(i8* %56, i32* %34, i32* %57, i32 64, i32* %58)
  %60 = load i8*, i8** %26, align 8
  %61 = call i32 @aes_encrypt_deinit(i8* %60)
  store i32 0, i32* %11, align 4
  store i32 1, i32* %27, align 4
  br label %62

62:                                               ; preds = %41, %40
  %63 = load i8*, i8** %22, align 8
  call void @llvm.stackrestore(i8* %63)
  %64 = load i32, i32* %11, align 4
  ret i32 %64
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i8* @aes_gcm_init_hash_subkey(i32*, i64, i32*) #2

declare dso_local i32 @aes_gcm_prepare_j0(i32*, i64, i32*, i32*) #2

declare dso_local i32 @aes_gcm_gctr(i8*, i32*, i32*, i64, i32*) #2

declare dso_local i32 @aes_gcm_ghash(i32*, i32*, i64, i32*, i64, i32*) #2

declare dso_local i32 @aes_gctr(i8*, i32*, i32*, i32, i32*) #2

declare dso_local i32 @aes_encrypt_deinit(i8*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
